# Mycolog

backend/: Cargo.toml
backend/src/: cli.rs  config.rs  context.rs  main.rs  secrets.rs
backend/src/application/: context.rs  mod.rs  result.rs
backend/src/application/backups/: limits.rs  mod.rs  service.rs
backend/src/application/database/: file.rs  init.rs  migration.rs  mod.rs
backend/src/application/database/system/: access.rs  create.rs  mod.rs
backend/src/application/database/system/methods/: backup.rs  export.rs  health.rs  import.rs  mod.rs  query.rs
backend/src/application/database/system/opts/: mod.rs  responses.rs  statements.rs  stats.rs
backend/src/application/email/: events.rs  files.rs  manager.rs  mod.rs  recipients.rs
backend/src/application/images/: data.rs  mod.rs
backend/src/application/images/manager/: constrain.rs  mod.rs  read.rs  write.rs
backend/src/application/logging/: mod.rs  service.rs
backend/src/application/schedules/: mod.rs  service.rs
backend/src/application/web/: error.rs  mod.rs  service.rs
backend/src/application/web/routes/: mod.rs
backend/src/application/web/routes/api/: admin.rs  mod.rs
backend/src/application/web/routes/api/auth/: cookie.rs  mod.rs  token.rs
backend/src/application/web/routes/api/auth/check/: mod.rs
backend/src/application/web/routes/api/auth/logout/: mod.rs
backend/src/application/web/routes/api/auth/signin/: data.rs  mod.rs
backend/src/application/web/routes/api/auth/signup/: data.rs  mod.rs
backend/src/application/web/routes/api/data/: access.rs  mod.rs
backend/src/application/web/routes/api/data/backup/: mod.rs
backend/src/application/web/routes/api/data/image/: mod.rs
backend/src/application/web/routes/api/data/multi/: data.rs  mod.rs
backend/src/application/web/routes/api/data/query/: data.rs  mod.rs
backend/src/application/web/routes/api/email/: mod.rs
backend/src/application/web/routes/api/email/webhook/: channel.rs  events.rs  extractors.rs  mod.rs
backend/src/shutdown/: exit.rs  mod.rs
backend/src/startup/: directories.rs  logging.rs  mod.rs
backend/src/utils/: asynchronous.rs  codec.rs  mod.rs  serde.rs  types.rs
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  theme.config.js
frontend/src/: app.html
frontend/src/config/: api.json  api_dev.json
frontend/src/lib/: config.ts
frontend/src/lib/api/: auth.ts  data.ts  index.ts
frontend/src/lib/api/decorators/: authorization.ts  buffered.ts
frontend/src/lib/components/auth/: signin.svelte  signup.svelte
frontend/src/lib/components/forms/: checkbox.svelte  number.svelte  password.svelte  text.svelte
frontend/src/lib/components/modals/: auth.svelte  authControl.svelte.ts  global.svelte
frontend/src/lib/components/theme/: dropdown.svelte  index.svelte.ts
frontend/src/lib/spells/: fetch.svelte.ts  query.svelte.ts  storage.svelte.ts
frontend/src/lib/utils/: async.ts  check.ts  conversion.ts  modifiers.ts
frontend/src/routes/: +layout.svelte  +page.svelte
scripts/: build.sh  build_backend.sh  build_frontend.sh  dev.sh  dev_backend.sh  dev_frontend.sh  export.sh  run.sh
working_dir/: .gitignore
working_dir/config/: config.toml
working_dir/emails/: verify.txt
working_dir/migrations/: schema.surql
working_dir/schedules/: hourly.surql
