[package]
name = "mycolog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { version = "1.2.0", features = ["rustls"], default-features = false }
serde = "1.0.197"
serde_json = "1.0.114"

[features]
"dev-env" = ["surrealdb/kv-mem"]
"prod-env" = ["surrealdb/kv-rocksdb"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
incremental = false
codegen-units = 1

