[package]
name = "mycolog"
version = "0.1.0"
description = "Web application backend for logging and analyizing mushroom cultivation and general mycology"
edition = "2021"
authors = ["TimerErTim"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web server
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["cookie", "multipart"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
reqwest = { version = "0.12.3", features = ["json", "rustls-tls", "http2"], default-features = false }

# Data storage
surrealdb-core = { version = "1.4.0", features = [], default-features = false }
image = "0.25.0"
async-compression = { version = "0.4.10", default-features = false, features = ["tokio", "brotli"] }

# Async driver
tokio = { version = "1.36.0", features = ["signal", "fs"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
futures-lite = { version = "2.3.0" }
async-channel = "1.9.0"
async-trait = "0.1.79"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing-log", "ansi"] }
tracing-appender = { version = "0.2.3" }
tracing-log = "0.2.0"

# Serialization
chrono = "0.4.34"
uuid = "1.7.0"
serde = "1.0.197"
serde_json = "1.0.114"
serde-json-fmt = "0.1.0"
toml = "0.8.10"

# Cryptography
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"

# Error handling
anyhow = { version = "1.0.80" }
thiserror = { version = "1.0.59" }

# QoL
cfg-if = "1.0.0"
lazy_static = "1.4.0"
clap = { version = "4.0.0", features = ["derive"] }
email-address-parser = "2.0.0"
regex = "1.10.4"

[features]
"dev-env" = ["surrealdb-core/kv-mem"]
"prod-env" = ["surrealdb-core/kv-speedb"]


[profile.dev]
opt-level = 1

[profile.release]
lto = true
incremental = false
codegen-units = 1
panic = "unwind"

